{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "BattleActions",
            "id": "161759df-8ffb-4de0-9f84-5d3dd8115eeb",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9a932975-ca24-42d2-91f4-ca7e0e6367b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "eaa909a0-f6d3-4c46-9d43-e93ee0972b1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a8f8519a-4ef5-42f8-8cf6-8d895d94cabf",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "780c7d2d-a7d4-49aa-ac17-1e0d1fc670e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c07bf98-b5eb-4a5e-8689-4228ceb0ae33",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31307e9c-8824-4c69-9ad1-45eebecec439",
                    "path": "<HID::MY-POWER CO.,LTD. SPEEDLINK COMPETITION PRO>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aef346eb-db9e-4c3b-b059-d7f429ab11c1",
                    "path": "<Joystick>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7200a265-2d3d-4e61-b2c1-fafd223babd4",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e88836e9-42bb-4b68-9a1f-489adce46d5b",
                    "path": "<HID::MY-POWER CO.,LTD. SPEEDLINK COMPETITION PRO>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14993915-c97a-4e39-b193-597bdb442706",
                    "path": "<HID::MY-POWER CO.,LTD. SPEEDLINK COMPETITION PRO>/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SelectActions",
            "id": "dd682474-b7b6-4b9e-b71a-076752380fbe",
            "actions": [
                {
                    "name": "Hammer",
                    "type": "Button",
                    "id": "220f2698-73f6-47b8-a022-9c376a665a99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Axe",
                    "type": "Button",
                    "id": "4bb93990-7541-4a51-9021-3dfb216d3a4f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spear",
                    "type": "Button",
                    "id": "cd472d3a-67f1-4ccf-ab73-2952d9170427",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ee54c102-1724-4d9a-86fc-65a383d7cc4a",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hammer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e11abd0-c4c5-4aa6-acbc-dd84f5c0fb1e",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Axe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f165778d-4bcc-4034-8cd2-07933d8cce7d",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spear",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}